--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script defer src="./js/face-api.min.js"></script>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
